styles/card.css
.scene {
    position: relative;
    width: 100%;
    height: 30vh;
    perspective: 600px;
}

.card-container {
    width: 100%;
    height: 100%;
    position: relative;
    transition: transform 0.3s;
    transform-style: preserve-3d;
}

.card-face {
    display: flex;
    position: absolute;
    height: 100%;
    width: 100%;
    border-radius: 20px;
    border: solid #8398cb;
    backface-visibility: hidden;
    justify-content: center;
    align-items: center;
    font-size: 200%;
}

.card-face-front {
    background: #c0e4d9;
}

.card-face-back {
    background:#cdc0e4;
    transform: rotateY(180deg);
}

.card-container.is-flipped {
    transform: rotateY(180deg);
}

